src/public/css/styles.scss
/* CSS Document */
/*These styles for html and body will prevent overflow issues in mobile*/
/* ====================== Navigation ====================== */
#site-nav {
  width: 100%;
  height: 5rem;
  background-color: #252831;
  text-align:center;
  h1{
    margin: auto;
    a{
      color: #fff;
      font-size: 14pt;
      font-weight: 200;
      letter-spacing: 10px;
      text-transform: uppercase;
    }
  }
}
#breadcrumb{
  ul {
    padding: 10px 40px 16px;
    list-style: none;
    background-color: #eee;
    font-size: 17px;
    margin: 0;
    width: calc(50% - 80px);
    li{
      /* Display list items side by side */
      display: inline;
      a {
        /* Add a color to all links inside the list */
        color: #0275d8;
        text-decoration: none;
        display: inline-block;
      }
    }
    li a:hover {
      /* Add a color on mouse-over */
      color: #01447e;
      text-decoration: underline;
    }
  }
}
#breadcrumb ul li+li:before {
  padding: 8px;
  color: black;
  content: "/\00a0";
}
/* ====================== Map ====================== */
#map-container{
  position: fixed;
  top: 5rem;
  display: block;
  right: 0;
  width: 50%;
  height: calc(100% - 5rem);
  background: blue none repeat scroll 0 0;
  #map {
    height: 100%;
    width: 100%;
    background-color: #ccc;
    .leaflet-control-container{
      .leaflet-top{
        .leaflet-control-zoom{
          margin-top: 65px !important;
        }
      }
    }
  }
}
/* ====================== Restaurant Filtering ====================== */
.filter-options {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row nowrap;
          flex-flow: row nowrap;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0;
  width: 100%;
  background-color: #3397DB;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  h3 {
    color: white;
    width: 30%;
    min-width: 6rem;
    -ms-flex-negative: 0;
        flex-shrink: 0;
    font-size: 1rem;
    font-weight: normal;
    line-height: 1;
    margin: 0 10px;
  }
  .select-container{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column nowrap;
            flex-flow: column nowrap;
    width: 70%;
    padding: 0 10px;
    select {
      background-color: white;
      border: 1px solid #fff;
      font-family: Arial,sans-serif;
      font-size: 11pt;
      -ms-flex-negative: 1;
          flex-shrink: 1;
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
      height: 35px;
      letter-spacing: 0;
      margin: 10px 0;
      padding: 0 10px;
      width: 95%;
    }
  }
}
/* ====================== Restaurant Listing ====================== */
#restaurant-content{
  display: block;
  width:50%;
  #restaurants-list {
    background-color: #f3f3f3;
    list-style: outside none none;
    margin: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    padding: 30px 15px 60px;
    text-align: center;
    width: 100%;
    li {
      background-color: #fff;
      border: 2px solid #ccc;
      font-family: Arial,sans-serif;
      margin: 15px auto;
      min-height: 380px;
      padding: 0 30px 25px;
      text-align: left;
      width: 70%;
      h2 {
        color: #f18200;
        font-family: Arial,sans-serif;
        font-size: 14pt;
        font-weight: 200;
        letter-spacing: 0;
        line-height: 1.3;
        margin: 20px 0 10px;
        text-transform: uppercase;
      }
      a {
        background-color: orange;
        border-bottom: 3px solid #eee;
        color: #fff;
        display: block;
        width: 7rem;
        font-size: 10pt;
        margin: 15px 0 0;
        padding: 8px 30px 10px;
        text-align: center;
        text-decoration: none;
        text-transform: uppercase;
      }
    }
    p {
      margin: 0;
      font-size: 11pt;
    }
    .restaurant-img {
      background-color: #ccc;
      display: block;
      margin: 0;
      max-width: 100%;
      min-height: 248px;
      min-width: 100%;
    }
  }
}
/* ====================== Restaurant Details ====================== */
#restaurant-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 50px 40px 30px;
  #restaurant-name {
    color: #f18200;
    font-family: Arial,sans-serif;
    font-size: 20pt;
    font-weight: 200;
    letter-spacing: 0;
    margin: 15px 0 30px;
    text-transform: uppercase;
    line-height: 1.1;
    text-align: center;
  }
  #restaurant-img {
    width: 100%;
  }
  #restaurant-address {
    font-size: 12pt;
    margin: 10px 0px;
  }
  #restaurant-cuisine {
    background-color: #333;
    color: #ddd;
    font-size: 12pt;
    font-weight: 300;
    letter-spacing: 10px;
    margin: 0 0 20px;
    padding: 2px 0;
    text-align: center;
    text-transform: uppercase;
    width: 100%;
  }
  #restaurant-hours {
    padding: 0 .5rem;
    td{
      color: #666;
    }
  }
}
#reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 30px 40px 80px;
  h3 {
    color: #f58500;
    font-size: 24pt;
    font-weight: 300;
    letter-spacing: -1px;
    padding-bottom: 1pt;
  }
  #reviews-list {
    margin: 0;
    padding: 0;
    li {
      background-color: #fff;
        border: 2px solid #f3f3f3;
      display: block;
      list-style-type: none;
      margin: 0 0 30px;
      overflow: hidden;
      padding: 20px;
      position: relative;
      width: 85%;
      p {
        margin: 0 0 10px;
      }
    }
  }
}
/* ====================== Image Fix ====================== */
img{
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: center;
     object-position: center;
}
/* ======================= Focus Assistants ======================== */
.list-item-describor{
  position: absolute;
  overflow: hidden;
  height: 0;
  width: 0;
}
.skip-link{
  position: absolute;
  height: 0;
  width: 0;
  right:-1em;
  top: -1em;
}

